package com.ads.customer.model;

public enum CustomerType {
    REGULAR,
    VIP,
    WHOLESALE
}
