package com.ads.customer.model;

public enum TaxIdType {
    CEDULA,
    RUC,
    PASSPORT
}
