package com.ads.ecommerce.order.model;

public enum PaymentMethod {
    CREDIT_CARD,    // Tarjeta de crédito
    DEBIT_CARD,     // Tarjeta de débito
    CASH,           // Efectivo
    BANK_TRANSFER,  // Transferencia bancaria
    PAYPAL          // PayPal
}